test: add test ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,8 @@ jobs:
   linting:
     name: Linting
     uses: ./.github/workflows/linting.yml
+
+  # Unit and functional tests
+  test:
+    name: Test
+    uses: ./.github/workflows/test.yml
