--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -16,7 +16,7 @@ jobs:
           ruby-version: '3.2'
           bundler-cache: true
       - name: Install necessary gems
-        run: bundle install --with=development
+        run: bundle config set --local with 'development' && bundle install
 
       - name: Run Code Linting
         run: bundle exec rake lint
